--- a/vtw.vcxproj.filters
+++ b/vtw.vcxproj.filters
@@ -2,5 +2,27 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="astar\astar.cpp">
+      <Filter>astar</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\test_astar.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="astar">
+      <UniqueIdentifier>{807e0620-07cc-4c76-927d-7162659764eb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="tests">
+      <UniqueIdentifier>{a68693b0-1faf-4740-9f2c-bb3706f19d12}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="astar\astar.h">
+      <Filter>astar</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\test.h">
+      <Filter>tests</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
