--- a/vtw.vcxproj
+++ b/vtw.vcxproj
@@ -22,10 +22,14 @@
     <ClCompile Include="astar\astar.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="tests\test_astar.cpp" />
+    <ClCompile Include="tests\test_timewheel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="astar\astar.h" />
     <ClInclude Include="tests\test.h" />
+    <ClInclude Include="timewheel\locked_queue.h" />
+    <ClInclude Include="timewheel\thread_pool.h" />
+    <ClInclude Include="timewheel\timewheel.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -111,7 +115,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
