--- a/vtw.vcxproj.filters
+++ b/vtw.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="tests\test_bytebuffer.cpp">
       <Filter>tests</Filter>
     </ClCompile>
+    <ClCompile Include="tests\test_libuv.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="astar">
